--- a/component.yaml
+++ b/component.yaml
@@ -7,7 +7,7 @@ inputs:
   defaultValue: "$AC_TESTINIUM_APP_PATH"
   isRequired: true
   title: Path of the build
-  description: "Full path of the build. For example $AC_EXPORT_DIR/Myapp.ipa."
+  description: "Full path of the build file. Example for iOS: `$AC_EXPORT_DIR/MyApp.ipa`. Example for Android: `$AC_APK_PATH`."
   helpText:
 - key: "AC_TESTINIUM_USERNAME"
   defaultValue: "$AC_TESTINIUM_USERNAME"
@@ -29,7 +29,7 @@ inputs:
   helpText:
 - key: "AC_TESTINIUM_COMPANY_ID"
   defaultValue: "$AC_TESTINIUM_COMPANY_ID"
-  isRequired: false
+  isRequired: true
   title: Company ID
   description: "Testinium company ID."
   helpText:
