--- a/component.yaml
+++ b/component.yaml
@@ -21,6 +21,12 @@ inputs:
   title: Password
   description: "Testinium password."
   helpText:
+- key: "AC_TESTINIUM_ENTERPRISE_BASE_URL"
+  defaultValue: "$AC_TESTINIUM_ENTERPRISE_BASE_URL"
+  isRequired: false
+  title: Testinium Enterprise Base URL
+  description: "The base URL for Testinium enterprise. This is required if you are using Testinium enterprise. Only for Testinium cloud users, this input is not mandatory."
+  helpText:
 - key: "AC_TESTINIUM_PROJECT_ID"
   defaultValue: "$AC_TESTINIUM_PROJECT_ID"
   isRequired: true
@@ -44,6 +50,17 @@ inputs:
   isRequired: true
   title: Testinium Maximum API Repetition Count
   description: "Determine max repetition in case of Testinium platform congestion or API errors."
+  helpText:
+outputs:
+- key: "AC_TESTINIUM_UPLOADED_APP_ID"
+  defaultValue: "AC_TESTINIUM_UPLOADED_APP_ID"
+  title: "Uploaded Application ID"
+  description: "The unique identifier for the application uploaded to Testinium. This ID is used to select the uploaded application on **Testinium Run Test Plan** step."
+  helpText:
+- key: "AC_TESTINIUM_APP_OS"
+  defaultValue: "AC_TESTINIUM_APP_OS"
+  title: "Application Operating System"
+  description: "The operating system of the uploaded application, either iOS or Android. This helps to run the test plan according to the platform OS in **Testinium Run Test Plan** step."
   helpText:
 processFilename: ruby
 processArguments: '%AC_STEP_TEMP%/main.rb'
